--- a/src/pages/diagram.html
+++ b/src/pages/diagram.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SASS</title>
-    <link rel="stylesheet" href="/index.2e8c441c.css">
-    <script src="/index.041c07f7.js" defer=""></script>
+    <title>Diagram</title>
+    <link rel="stylesheet" href="../css/style.scss">
+    <script src="../function.js" type="module"></script>
 </head>
 <body>
     <header>
         <nav class="header-nav">
             <ul class="header-list">
-                <li><a href="/index.html">Copyright</a></li>
-                <li><a href="/index.html"><img class="moon-animation" src="/moon.6959b093.png" alt=""></a></li>
+                <li><a href="./index.html">Copyright</a></li>
+                <li><a href="../pages/index.html"><img class="moon-animation" src="../asset/images/moon.png" alt=""></a></li>
             </ul>
         </nav>
         <div class="menu-container">
             <div id="menu" class="menu">
-                <img class="menu-icon" src="/menu-icon.95dc81bb.svg" alt="Meny ikon" width="40" height="40">
+                <img class="menu-icon" src="../asset/images/menu-icon.svg" alt="Meny ikon" width="40" height="40">
                 <span class="menu-heading">Meny</span>
             </div>
             <div class="dropdown-menu" id="dropdown-menu">
                 <ul class="menu-list">
-                    <li><a href="/animering.html">Animeringar</a></li>
-                    <li><a href="/sass.html">SASS</a></li>
-                    <li><a href="/copyright.html">Copyright</a></li>
+                    <li><a href="./animering.html">Animeringar</a></li>
+                    <li><a href="../pages/sass.html">SASS</a></li>
+                    <li><a href="./copyright.html">Copyright</a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                 </ul>
@@ -32,9 +32,7 @@
         </div>
     </header>
     <main>
-        <h1>Copyright</h1>
-        <p>Alla bilder är genererade i Canva</p>
-        <p>Ikon för menu är laddat från gratis webbsida svgrepo.com.</p>
+        
     </main>
     <footer>
         <nav>
