Lade till function för stapeldiagram

--- a/src/pages/diagram.html
+++ b/src/pages/diagram.html
@@ -25,14 +25,15 @@
                     <li><a href="./animering.html">Animeringar</a></li>
                     <li><a href="../pages/sass.html">SASS</a></li>
                     <li><a href="./copyright.html">Copyright</a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="./diagram.html">Diagram</a></li>
                     <li><a href="#"></a></li>
                 </ul>
             </div>
         </div>
     </header>
     <main>
-        
+        <canvas id="diagram" width="400" height="400"></canvas>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </main>
     <footer>
         <nav>
