--- a/src/pages/animering.html
+++ b/src/pages/animering.html
@@ -25,7 +25,7 @@
                     <li><a href="./animering.html">Animeringar</a></li>
                     <li><a href="../pages/sass.html">SASS</a></li>
                     <li><a href="./copyright.html">Copyright</a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="./diagram.html">Diagram</a></li>
                     <li><a href="#"></a></li>
                 </ul>
             </div>
