Lade till sida för karta och funktion för att visualisera karta

--- a/src/pages/copyright.html
+++ b/src/pages/copyright.html
@@ -26,7 +26,7 @@
                     <li><a href="../pages/sass.html">SASS</a></li>
                     <li><a href="./copyright.html">Copyright</a></li>
                     <li><a href="./diagram.html">Diagram</a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="./map.html">Karta</a></li>
                 </ul>
             </div>
         </div>
