--- a/src/pages/map.html
+++ b/src/pages/map.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animeringar</title>
+    <title>Karta</title>
     <link rel="stylesheet" href="../css/style.scss">
     <script src="../function.js" type="module"></script>
+    <script src="../map.js" type="module"></script>
 </head>
 <body>
     <header>
         <nav class="header-nav">
             <ul class="header-list">
-                <li><a href="./index.html">Startsida</a></li>
+                <li><a href="./index.html">Copyright</a></li>
                 <li><a href="../pages/index.html"><img class="moon-animation" src="../asset/images/moon.png" alt=""></a></li>
             </ul>
         </nav>
@@ -32,23 +33,11 @@
         </div>
     </header>
     <main>
-        <h1 class="h1-animation">Vår solsystem</h1>
-        <div class="animation-container">
-            <picture>
-                <source srcset="../asset/images/sun.png?as=webp" type="image/webp">
-                <img class="sun" src="../asset/images/sun.png" alt="Bild på en sol">
-            </picture>
-            <picture>
-                <source srcset="../asset/images/earth.png?as=webp" type="image/webp">
-                <img class="earth" src="../asset/images/earth.png" alt="Bild på en jord">
-            </picture>    
-            <picture>
-                <source srcset="../asset/images/saturn.png?as=webp" type="image/webp">
-                <img class="saturn" class="earth" src="../asset/images/saturn.png" alt="Bild på en saturn">
-            </picture>  
+        <h1>Karta</h1>
+        <div class="controls">
+            <input id="search-input" type="text" placeholder="Search places..." style="width: 300px; padding: 5px;">
         </div>
-        <p>Jorden roterar kring solen i en bana som kallas en omloppsbana. Denna rörelse tar ungefär ett år att fullfölja. Jorden rör sig i en elliptisk bana, vilket betyder att den inte är perfekt rund utan lite utsträckt.</p>
-        <p>Under sin rotation runt solen lutar jordens axel, vilket skapar årstider. När en del av jorden lutar mot solen får den mer direkt solljus och blir varmare, vilket ger sommar. Samtidigt lutar den motsatta sidan bort från solen och blir kallare, vilket ger vinter.</p>
+        <div id="map"></div>
     </main>
     <footer>
         <nav>
@@ -60,5 +49,7 @@
             </ul>
         </nav>
     </footer>
+    <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
+        ({key: "AIzaSyA4KDHjMvO7qZ02IIF6US5qoVhca_wSDA0", v: "weekly"});</script>
 </body>
 </html>
