--- a/src/pages/diagram.html
+++ b/src/pages/diagram.html
@@ -6,6 +6,7 @@
     <title>Diagram</title>
     <link rel="stylesheet" href="../css/style.scss">
     <script src="../function.js" type="module"></script>
+    <script src="../diagram.js" type="module"></script>
 </head>
 <body>
     <header>
@@ -26,8 +27,7 @@
                     <li><a href="../pages/sass.html">SASS</a></li>
                     <li><a href="./copyright.html">Copyright</a></li>
                     <li><a href="./diagram.html">Diagram</a></li>
-                    <li><a href="#"></a></li>
-                </ul>
+                    <li><a href="./map.html">Karta</a></li>                </ul>
             </div>
         </div>
     </header>
